// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSeriesPanel (canvas) — Annotations point annotations 1`] = `
[
  {
    "props": {
      "x": 0.5,
      "y": 0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": "rgba(0, 0, 0, 0)",
    },
    "type": "fillStyle",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 350,
            "width": 617,
            "x": 23.5,
            "y": 7.5,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 24,
            "y": 320,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 178,
            "y": 137,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 332,
            "y": 228,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 486,
            "y": 45,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 173,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.5,
      "y": -0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "x": 0.5,
      "y": 0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "fillStyle",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 357,
            "width": 624,
            "x": 20,
            "y": 4,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "x": 26,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 180,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 334,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 488,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 642,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 26,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 180,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 334,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 488,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 642,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.5,
      "y": -0.5,
    },
    "type": "translate",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 349,
      "width": 616,
      "x": 24,
      "y": 8,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 349,
            "width": 616,
            "x": 24,
            "y": 8,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": 2,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "segments": [
        5,
        5,
      ],
    },
    "type": "setLineDash",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 178,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 178,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 178,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 178,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 332,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 332,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 332,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 332,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 486,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 486,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 486,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 486,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`TimeSeriesPanel (canvas) — Annotations region annotations 1`] = `
[
  {
    "props": {
      "x": 0.5,
      "y": 0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": "rgba(0, 0, 0, 0)",
    },
    "type": "fillStyle",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 350,
            "width": 617,
            "x": 23.5,
            "y": 7.5,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 24,
            "y": 320,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 178,
            "y": 137,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 332,
            "y": 228,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 486,
            "y": 45,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 640,
            "y": 173,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.5,
      "y": -0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "x": 0.5,
      "y": 0.5,
    },
    "type": "translate",
  },
  {
    "props": {
      "value": "#808080",
    },
    "type": "fillStyle",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 357,
            "width": 624,
            "x": 20,
            "y": 4,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "x": 26,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 180,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 334,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 488,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 642,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "path": [
        {
          "props": {
            "x": 26,
            "y": 320,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 24,
            "y": 320,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 180,
            "y": 137,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 178,
            "y": 137,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 334,
            "y": 228,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 332,
            "y": 228,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 488,
            "y": 45,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 486,
            "y": 45,
          },
          "type": "arc",
        },
        {
          "props": {
            "x": 642,
            "y": 173,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 2,
            "startAngle": 0,
            "x": 640,
            "y": 173,
          },
          "type": "arc",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {
      "x": -0.5,
      "y": -0.5,
    },
    "type": "translate",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "height": 349,
      "width": 616,
      "x": 24,
      "y": 8,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 349,
            "width": 616,
            "x": 24,
            "y": 8,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": 2,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "segments": [
        5,
        5,
      ],
    },
    "type": "setLineDash",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 255,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 255,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 255,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 255,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 409,
      "y": 8,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 409,
      "y": 357,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "value": "#00d3ff",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 409,
            "y": 8,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 409,
            "y": 357,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "rgba(0, 211, 255, 0.1)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "height": 349,
      "width": 154,
      "x": 255,
      "y": 8,
    },
    "type": "fillRect",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;
